corrected a bug on the update answer model

--- a/app/views/answers/show_spec.html.erb
+++ b/app/views/answers/show_spec.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Go Back", :back %>
 <hr>
 <div class="container">
-  <%= render inline: @answer.spectml %>
+  <%= render html: @answer.spectml.html_safe %>
 </div>
