added a few more exercises and tests. Changed column type from json to text for spectml and from string to text for answer

--- a/app/views/answers/show_spec.html.erb
+++ b/app/views/answers/show_spec.html.erb
@@ -1,5 +1,9 @@
 <%= link_to "Go Back", :back %>
 <hr>
 <div class="container">
-  <%= render html: @answer.spectml.html_safe %>
+  <% if @answer.status %>
+    <%= render html: @answer.spectml.html_safe %>
+  <% else %>
+    <%= render partial: "answers/_spectml/#{@answer.set_file_path}" %>
+  <% end -%>
 </div>
